unpackaged/config/ready/12_StudentRequest/objects/Case.object
<CustomObject>
    <fields>
        <fullName>redu_Related_Course_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Course Enrollment</label>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redu_Related_Program_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User will need to manually search and link this case to the relevant Program Enrollment record</inlineHelpText>
        <label>Related Program Enrollment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ContactId</field>
                <operation>equals</operation>
                <valueField>hed__Program_Enrollment__c.hed__Contact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redu_Type_of_Variation__c</fullName>
        <label>Type of Variation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deferral</fullName>
                </value>
                <value>
                    <fullName>Withdraw from Program</fullName>
                </value>
                <value>
                    <fullName>Withdraw from Course</fullName>
                </value>
                <value>
                    <fullName>Timetable Adjustment</fullName>
                </value>
                <value>
                    <fullName>Program Change</fullName>
                </value>
                <value>
                    <fullName>Course Change</fullName>
                </value>
                <value>
                    <fullName>Study Mode Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Student_Request</fullName>
        <active>true</active>
        <businessProcess>Behavior Management</businessProcess>
        <description>Student request of different types</description>
        <label>Student Request</label>
    </recordTypes>
</CustomObject>